<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:background="@color/colorWhite">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/device_name" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxUI"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_below="@id/editTextLayout">
        <CheckBox
            android:id="@+id/buttton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/slider"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/timer"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:background="@drawable/add_button_selector"
        android:text="@string/ok"
        android:layout_below="@id/checkBoxUI"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:background="@drawable/cancel_button_selector"
        android:text="@string/cancel"
        android:layout_below="@id/addButton"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>